test: comprehensive test coverage expansion + CI quality gates (#26)
## Summary

- **+8,599 lines** of test code across 19 new test files and 5 enhanced
existing files
- **824 headless + 489 GUI tests**, all passing, 0 failures
- **4 bug fixes** discovered during testing (emoji Unicode, writer
close, thread safety, XML DoS)
- **2 CI quality gates** added to prevent regression
- **Quality sweep**: 148 serialVersionUID, 72 thread safety fixes, UTF-8
consistency, deprecated API removal

## Test Coverage Expansion (Phases 0-5)

| Phase | Tests | Focus |
|-------|-------|-------|
| Phase 0 | 37 | Quality sweep regression tests |
| Phase 1-3 | 420 | Filter conditions, node model, IO round-trip, chaos
XML defense, map lifecycle, action framework |
| Phase 4 | 111 | XSLT export pipeline, plugin logic, collaboration
structural |
| Phase 5 | 20 | Structural quality invariants, backward compatibility |
| Elicitation | 10 | Missing P0 tests from gap analysis |

## Bug Fixes

1. **fix(unicode)**: preserve supplementary Unicode (emoji) in XML
round-trip
2. **fix(security)**: add XML secure processing and thread-safe children
list
3. **fix(threading)**: double-checked locking for NodeAdapter, FreeMind
logger, XmlBindingTools holder pattern
4. **fix(i18n)**: UTF-8 consistency in PrintStream/OutputStream chain

## CI Quality Gates (NEW)

- **Test Count Regression Guard**: fails CI if headless test count drops
below 800
- **Coverage Threshold Enforcement**: runs
`jacocoTestCoverageVerification` in CI (20% minimum)

## Quality Sweep (Code Health)

- 148 `serialVersionUID` added to Swing classes
- 72 unsynchronized logger lazy-init race conditions fixed
- 11 boxing antipatterns replaced with direct parse
- 9 default-encoding locations replaced with explicit UTF-8
- 5 HIGH correctness bugs fixed (NPE, type mismatch, wrong key)
- 100 javadoc errors fixed

## Test Plan

- [x] `make build` passes (compile + test)
- [x] `make test` — 824 headless tests pass
- [x] GUI tests — 489 tests pass 