@@ -54,9 +54,8 @@ public class ModesCreator {
 	}
 
 	public Set<String> getAllModes() {
-		if (logger == null) {
 			logger = c.getFrame().getLogger(this.getClass().getName());
-		}
+
 		if (mCreatedModes == null) {
 			mCreatedModes = new TreeMap<>();
 			modesTranslation = new HashMap<>();
@@ -77,7 +76,7 @@ public class ModesCreator {
 
 	/**
 	 * Creates a new ModeController.
-	 * 
+	 *
 	 */
 	public Mode getMode(String modeAlias) {
 		getAllModes();
@@ -88,7 +87,7 @@ public class ModesCreator {
 		if (mCreatedModes.get(modeName) == null) {
 			try {
 				Mode mode = null;
-				mode = (Mode) Class.forName(modeName).newInstance();
+				mode = (Mode) Class.forName(modeName).getDeclaredConstructor().newInstance();
 				logger.info("Initializing mode " + modeAlias);
 				mode.init(c);
 				logger.info("Done: Initializing mode " + modeAlias);
