@@ -77,14 +77,11 @@ public class MindMapHookFactory extends HookFactoryAdapter {
 	/** Contains PluginRegistrationType -> PluginType relations. */
 	protected static HashSet<HookDescriptorRegistration> allRegistrations;
 
-	/**
-	 *
-	 */
+
 	public MindMapHookFactory() {
-		if (logger == null) {
 			logger = freemind.main.Resources.getInstance().getLogger(
 					this.getClass().getName());
-		}
+
 		allRegistrationInstances = new HashMap<>();
 	}
 
@@ -133,9 +130,7 @@ public class MindMapHookFactory extends HookFactoryAdapter {
 		return returnValue;
 	}
 
-	/**
-	 *
-	 */
+
 	private void actualizePlugins() {
 		if (importWizard == null) {
 			importWizard = new ImportWizard();
@@ -204,7 +199,7 @@ public class MindMapHookFactory extends HookFactoryAdapter {
 			ClassLoader loader = descriptor.getPluginClassLoader();
 			Class hookClass = Class.forName(descriptor.getClassName(), true,
 					loader);
-			MindMapHook hook = (MindMapHook) hookClass.newInstance();
+			MindMapHook hook = (MindMapHook) hookClass.getDeclaredConstructor().newInstance();
 			decorateHook(hookName, descriptor, hook);
 			return hook;
 		} catch (Throwable e) {
@@ -243,8 +238,7 @@ public class MindMapHookFactory extends HookFactoryAdapter {
 		hook.setPluginBaseClass(pluginBaseClassSearcher);
 	}
 
-	/**
-	 */
+
 	public void decorateAction(String hookName, AbstractAction action) {
 		HookDescriptorPluginAction descriptor = getHookDescriptor(hookName);
 		String name = descriptor.getName();
@@ -284,8 +278,7 @@ public class MindMapHookFactory extends HookFactoryAdapter {
 		return descriptor.menuPositions;
 	}
 
-	/**
-	 */
+
 	public HookInstanciationMethod getInstanciationMethod(String hookName) {
 		HookDescriptorPluginAction descriptor = getHookDescriptor(hookName);
 		return descriptor.getInstanciationMethod();
@@ -329,7 +322,7 @@ public class MindMapHookFactory extends HookFactoryAdapter {
 				container.isPluginBase = descriptor.getIsPluginBase();
 				returnValue.add(container);
 			} catch (ClassNotFoundException e) {
-				logger.warning("Plugin registration class not found (plugin not compiled?): "
+				logger.fine("Plugin registration class not found (plugin not compiled?): "
 						+ descriptor.getClassName());
 			}
 		}
@@ -349,8 +342,7 @@ public class MindMapHookFactory extends HookFactoryAdapter {
 		return getPluginBaseClass(descriptor);
 	}
 
-	/**
-	 */
+
 	private Object getPluginBaseClass(HookDescriptorPluginAction descriptor) {
 		// test if registration is present:
 		Object baseClass = null;
@@ -361,8 +353,7 @@ public class MindMapHookFactory extends HookFactoryAdapter {
 		return baseClass;
 	}
 
-	/**
-	 */
+
 	private HookDescriptorPluginAction getHookDescriptor(String hookName) {
 		HookDescriptorPluginAction descriptor = (HookDescriptorPluginAction) pluginInfo
 				.get(hookName);
